--- a/release-notes.html
+++ b/release-notes.html
@@ -44,19 +44,20 @@
         <div class="span3">
           <img src="/GibbsSampler/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
-            <li class="nav-header">GibbsSampler</li>
-            <li><a href="/GibbsSampler/index.html">Home page</a></li>
-            <li class="divider"></li>
-            <li><a href="http://nuget.org/packages/GibbsSampler">Get Library via NuGet</a></li>
-            <li><a href="https://github.com/Etschbeijer/GibbsSampler">Source Code on GitHub</a></li>
-            <li><a href="/GibbsSampler/license.html">License</a></li>
-            <li><a href="/GibbsSampler/release-notes.html">Release Notes</a></li>
-            
-            <li class="nav-header">Getting started</li>
-            <li><a href="/GibbsSampler/tutorial.html">Sample tutorial</a></li>
+              <li class="nav-header">GibbsSampler</li>
+              <li><a href="/GibbsSampler/index.html">Home page</a></li>
+              <li class="divider"></li>
+              <li><a href="http://nuget.org/packages/GibbsSampler">Get Library via NuGet</a></li>
+              <li><a href="https://github.com/Etschbeijer/GibbsSampler">Source Code on GitHub</a></li>
+              <li><a href="/GibbsSampler/GibbsSampling.html">Blog-Post</a></li>
+              <li><a href="/GibbsSampler/license.html">License</a></li>
+              <li><a href="/GibbsSampler/release-notes.html">Release Notes</a></li>
 
-            <li class="nav-header">Documentation</li>
-            <li><a href="/GibbsSampler/reference/index.html">API Reference</a></li>
+              <li class="nav-header">Getting started</li>
+              <li><a href="/GibbsSampler/tutorial.html">Sample tutorial</a></li>
+
+              <li class="nav-header">Documentation</li>
+              <li><a href="/GibbsSampler/reference/index.html">API Reference</a></li>
           </ul>
         </div>
       </div>
