--- a/tutorial.html
+++ b/tutorial.html
@@ -5,7 +5,7 @@
     <title>Introducing your project
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Algorithm for motif finding." />
+    <meta name="description" content="Algorithm for motive finding." />
     <meta name="author" content="Etschbeijer" />
 
     <script src="https://code.jquery.com/jquery-1.8.0.js"></script>
