Update generated documentation for version 0.0.1

--- a/Documentation.html
+++ b/Documentation.html
@@ -63,9 +63,14 @@ The core idea of the Site-Sampler will now be explained with an example:</p>
 did not choose (see Figure 2).</p>
 <p><img src="img/pfm.png" alt="Figure 3" /></p>
 <p>Figure 3.</p>
-<p>Align these segments with eacht other and count the amount of elements at each position in order to create a so called Position-Frequency-Matrix (PFM) (see Figure 3).</p>
-<p><img src="img/CFV.png" alt="Figure 4" /></p>
+<p><img src="img/ppm.png" alt="Figure 4" /></p>
 <p>Figure 4.</p>
+<p>Align these segments with eacht other and count the amount of elements at each position in order to create a so called Position-Frequency-Matrix (PFM) (see Figure 3).
+In the next step ypu create a so called position probability matrix by adding a pseudocount to each element at each position and normalize by dividing each element at
+each position through the summ of the column (see Figure 4). You add a pseudocount in order to avoid dividing through zero because often times the segments are rather short and do not
+contain every element and it is still possible to encounter one in the rest of the sequence.</p>
+<p><img src="img/cfv.png" alt="Figure 5" /></p>
+<p>Figure r.</p>
 <p>Then you create a so called Frequency-Composite-Vector (FCV) by counting the amount of elements in the unchosen sequences without the elements that are part of the segments
 that are used to create the PFM.</p>
 
