Update generated documentation for version 0.0.1

--- a/Documentation.html
+++ b/Documentation.html
@@ -70,7 +70,7 @@ In the next step ypu create a so called position probability matrix by adding a 
 each position through the summ of the column (see Figure 4). You add a pseudocount in order to avoid dividing through zero because often times the segments are rather short and do not
 contain every element and it is still possible to encounter one in the rest of the sequence.</p>
 <p><img src="img/cfv.png" alt="Figure 5" /></p>
-<p>Figure r.</p>
+<p>Figure 5.</p>
 <p>Then you create a so called Frequency-Composite-Vector (FCV) by counting the amount of elements in the unchosen sequences without the elements that are part of the segments
 that are used to create the PFM.</p>
 
