Update generated documentation for version 0.0.1

--- a/Documentation.html
+++ b/Documentation.html
@@ -54,12 +54,8 @@ Sadly, they are poorly conserved compared to the HSEs of other organims and we h
 a motive in every sequence to work properly, the motive-Sampler does not. The motive-Sampler can also find multiple motives per sequence, while the Site-Sampler can only find one
 but works faster and is more sensitive for less conserved structures then the motive-Sampler. In order for both to wok proberly, the length of the sequence must be known.
 The core idea of the Site-Sampler will now be explained with an example:</p>
-<p><img src="img/sequences1.png" alt="Figure 1" /></p>
-<p>Figure 1.</p>
-<p>You have four sequences (see Figure 1) and you pick one at random and put it aside.</p>
-<p><img src="img/sequences2.png" alt="Figure 2" /></p>
-<p>Figure 2.</p>
-<p>After that you choose one segment with the length of your motive in every sequence you
+<p><img src="img/sequences1.png" alt="Figure 1" /> Figure 1. <img src="img/sequences2.png" alt="Figure 2" /> Figure 2.</p>
+<p>You have four sequences (see Figure 1) and you pick one at random and put it aside. After that you choose one segment with the length of your motive in every sequence you
 did not choose (see Figure 2).</p>
 <p><img src="img/pfm.png" alt="Figure 3" /></p>
 <p>Figure 3.</p>
@@ -67,12 +63,30 @@ did not choose (see Figure 2).</p>
 <p>Figure 4.</p>
 <p>Align these segments with eacht other and count the amount of elements at each position in order to create a so called Position-Frequency-Matrix (PFM) (see Figure 3).
 In the next step ypu create a so called position probability matrix by adding a pseudocount to each element at each position and normalize by dividing each element at
-each position through the summ of the column (see Figure 4). You add a pseudocount in order to avoid dividing through zero because often times the segments are rather short and do not
+each position through the sum of the column (see Figure 4). You add a pseudocount in order to avoid dividing through zero because often times the segments are rather short and do not
 contain every element and it is still possible to encounter one in the rest of the sequence.</p>
-<p><img src="img/cfv.png" alt="Figure 5" /></p>
-<p>Figure 5.</p>
+<p><img src="img/cfv.png" alt="Figure 5" /> Figure 5.  <img src="img/SegmentScore.png" alt="Figure 6" /> Figure 6.</p>
 <p>Then you create a so called Frequency-Composite-Vector (FCV) by counting the amount of elements in the unchosen sequences without the elements that are part of the segments
-that are used to create the PFM.</p>
+that are used to create the PFM. In the following you work with the chosen sequence by increasing the counts of the vector with amount of elements in this sequence and add a pseudocount to each element.<br />
+The PPM is now used to calculate the likelyhood of each segment to be a motive by multiplying the likelyhoods of the found elements to be at that position (see Figure 4 &amp; 6).</p>
+<p><img src="img/pcm.png" alt="Figure 7" /></p>
+<p>Figure 7.</p>
+<p>Now that the segment likelyhoods are calculated it is time to check, how different they are from the background. For that, the FCV is tuned by creating a new FCV for every segment.
+For that, the count of eacht element is substracted from the total counts of elements in the FCV but it must not be smaller than the pseudocount. This is done because some input sequences are
+very small and significant element combinations (e.g. several Ts in a row) could get low weight because they are otherwise evenly distributed. So by reducing the count for the segment, their weight
+is increased. After that the FCVs are normalized by dividing every element count by the the sum of the vector. These new vectors are Probability-Composite-Vectors (PCV) and represent the likelyhood to pick a
+element by chance when picking a random element from the sequences (see Figure 7).</p>
+<p><img src="img/pwms.png" alt="Figure 8" /></p>
+<p>Figure 8.</p>
+<p>The PCVs are then used to calculate the likelyhood for a segment to be background by multiplying the likelyhood of the element to be picked at random in the segment. To calculate this likelyhood only the
+PCVs that were created without the elements of the segment are used and these new background segment scores are used to normalize the PPM segment score in the earlier step. The result of this division is then
+log2 transformed to get the so called Position-Weight-Matrix-Score (PWMS). Based on the PWMSs in Figure 8, PWMS is more likely to be a conserved motive and would be remembered (see Figure 8).
+A Position-Weight-Matrix (PWM) is a PPM normalized to its background but becasue we assume no prior knowledge about the background the vectors and the PWMs need to be calculatedfor every segment anew.</p>
+<p>The motive with the best PWMS is remembered of the chosen sequence and then a new sequence is chosen at random and the calculation of the vectors and matrices repeated in the same fashion until every sequence
+had been chosen. Then the remembered motifs are used to calculate a new PPM. A sequence is randomly chosen and the best PWMS is looked for using the PPM. Then the PWMS of this run of the sequence is compared with
+the remembered PWMS and if it is better it replaces the old one and a new PPM is calculated. Otherwise the old PPM is kept and the next Sequence chosen at random and these iterations are repeated until convergence
+occures. That means, that always the same motifs are chosen because they have the best PWMSs. This happens because by chance a random start will happen in one of the conserved structures and then it is more likely to
+find another conserverd structure in one of the other sequences, because they are more similiar to each other than the background and have a higher PWMS that way.</p>
 
 
         </div>
