--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 <span class="l">4: </span>
 </pre></td>
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="pp">#r</span> <span class="s">&quot;GibbsSampling.dll&quot;</span>
-<span class="k">open</span> <span class="id">GibbsSampling</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="id">GibbsSampling</span>
 
-<span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="fn">printfn</span> <span class="s">&quot;hello = </span><span class="pf">%i</span><span class="s">&quot;</span> <span class="o">&lt;|</span> <span class="id">Library</span><span class="pn">.</span><span class="id">hello</span> <span class="n">0</span>
+<span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="fn">printfn</span> <span class="s">&quot;hello = </span><span class="pf">%i</span><span class="s">&quot;</span> <span class="o">&lt;|</span> <span class="id">Library</span><span class="pn">.</span><span class="id">hello</span> <span class="n">0</span>
 </code></pre></td>
 </tr>
 </table>
@@ -83,7 +83,8 @@ also want to read the <a href="https://github.com/fsprojects/GibbsSampling/blob/
 redistribution for both commercial and non-commercial purposes. For more information see the
 <a href="https://github.com/fsprojects/GibbsSampling/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
 
-<div class="tip" id="fs1">val printfn : format:Printf.TextWriterFormat&lt;&#39;T&gt; -&gt; &#39;T</div>
+<div class="tip" id="fs1">namespace GibbsSampling</div>
+<div class="tip" id="fs2">val printfn : format:Printf.TextWriterFormat&lt;&#39;T&gt; -&gt; &#39;T</div>
 
         </div>
         <div class="span3">
@@ -92,7 +93,7 @@ redistribution for both commercial and non-commercial purposes. For more informa
               <li class="nav-header">GibbsSampler</li>
               <li><a href="/GibbsSampler/index.html">Home page</a></li>
               <li class="divider"></li>
-              <li><a href="http://nuget.org/packages/GibbsSampler">Get Library via NuGet</a></li>
+              
               <li><a href="https://github.com/Etschbeijer/GibbsSampler">Source Code on GitHub</a></li>
               <li><a href="/GibbsSampler/Documentation.html">Blog-Post</a></li>
               <li><a href="/GibbsSampler/license.html">License</a></li>
