--- a/tutorial.html
+++ b/tutorial.html
@@ -43,7 +43,7 @@
 <span class="l">4: </span>
 </pre></td>
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="pp">#r</span> <span class="s">&quot;GibbsSampling.dll&quot;</span>
-<span class="k">open</span> <span class="id">GibbsSampling</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="id">GibbsSampling</span>
 
 <span class="id">Library</span><span class="pn">.</span><span class="id">hello</span> <span class="n">0</span>
 </code></pre></td>
@@ -51,6 +51,7 @@
 </table>
 <p>Some more info</p>
 
+<div class="tip" id="fs1">namespace GibbsSampling</div>
 
         </div>
         <div class="span3">
@@ -59,7 +60,7 @@
               <li class="nav-header">GibbsSampler</li>
               <li><a href="/GibbsSampler/index.html">Home page</a></li>
               <li class="divider"></li>
-              <li><a href="http://nuget.org/packages/GibbsSampler">Get Library via NuGet</a></li>
+              
               <li><a href="https://github.com/Etschbeijer/GibbsSampler">Source Code on GitHub</a></li>
               <li><a href="/GibbsSampler/Documentation.html">Blog-Post</a></li>
               <li><a href="/GibbsSampler/license.html">License</a></li>
